--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
         </ul>
       </div>
       <div class="col-md-6 col-md-offset-1">  
-        <form class="form-group input" ng-submit="addMeme()">
-          <input class="form-control" type="text" ng-model="formContent" value="Enter meme URL here!"></input>
+        <form class="form-group" ng-submit="addMeme()">
+          <input class="form-control" type="text" ng-model="formContent" placeholder="Enter meme URL here!"></input>
           <div class="text-right button-group">
             <button class="btn btn-primary" type="submit">Add Meme</button>
             <button class="btn btn-danger" ng-click="removeAll()">Delete All</button>
