--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,11 @@
           </div>
         </form>
 
-        <div class="memes" ng-repeat="meme in memes | orderBy: '-id'">
-          <span class="glyphicon glyphicon-remove" ng-click="delete(meme)"></span>
-          <img src={{meme.image}}>
+        <div class="memes">
+          <div ng-repeat="meme in memes | orderBy: '-id'">
+            <span class="glyphicon glyphicon-remove" ng-click="delete(meme)"></span>
+            <img src={{meme.image}}>
+          </div>
         </div>
       </div>
       <div class="col-md-2 col-md-offset-1 sidebar">
